Add rainbow colors and a link to the developer domain.

--- a/options.html
+++ b/options.html
@@ -13,7 +13,7 @@
 <body>
   <div id="button-div"></div>
   <div>
-    <p>Choose a different background color!</p>
+    <p>Choose a different background color for <a href="https://developer.chrome.com/home" target="_blank">developer.google.com</a></p>
   </div>
   <script src="options.js"></script>
 </body>
